# non-shannon-inequalities

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  NOTICE.license  NonShannon.lean  NonShannonTest.lean  README.md  REUSE.toml  cspell-words.txt  cspell-words.txt.license  cspell.jsonc  lake-manifest.json  lakefile.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  lean.instructions.md  python.instructions.md
.github/workflows/: ci.yml  text-lint.yml
NonShannon/: Catalog.lean  Prelude.lean
NonShannon/Certificate/: Schema.lean  Status.lean
NonShannon/CopyLemma/: Parameterized.lean  Parameters.lean
NonShannon/Examples/: ZhangYeung.lean
NonShannon/Inequality/: Canonical.lean  Subsets.lean  Symmetry.lean  Vector.lean
NonShannonTest/: Catalog.lean  Prelude.lean
NonShannonTest/Certificate/: Schema.lean
NonShannonTest/CopyLemma/: Parameterized.lean  Parameters.lean
NonShannonTest/Examples/: ZhangYeung.lean  ZhangYeungFromPython.lean  ZhangYeungSwapZeroOneFromPython.lean
NonShannonTest/Inequality/: Canonical.lean  Orbit.lean  Symmetry.lean  Vector.lean
data/fixtures/: zhang-yeung.json
docs/research/: copy-lemma-naming.md  interchange-format.md  track-a-architecture.md  trust-boundary.md
docs/reviews/: 2026-04-21-research-implement-phase-m1a.md  (+2 more)
references/: README.md  papers.bib
schemas/: candidate-inequality.schema.json  redundancy-certificate.schema.json
tests/: test_canonical.py  test_emit_lean.py  test_schema.py  test_symmetry.py
(+16 files in other folders)
