[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "non-shannon-search"
version = "0.1.0"
description = "Search and certificate tooling for non-Shannon information inequalities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.23.0",
]

[project.scripts]
non-shannon-search = "non_shannon_search.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/non_shannon_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
